k8s/aws-image-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws-image-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aws-image-api
  template:
    metadata:
      labels:
        app: aws-image-api
    spec:
      containers:
      - name: aws-image-api
        image: hivqs79/portal-do-conselho_aws-image-api:latest
        ports:
        - containerPort: 3060
---
apiVersion: v1
kind: Service
metadata:
  name: aws-image-api-service
spec:
  selector:
    app: aws-image-api
  ports:
    - protocol: TCP
      port: 3060
      targetPort: 3060
  type: ClusterIP
