k8s/email-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email-api
  template:
    metadata:
      labels:
        app: email-api
    spec:
      containers:
      - name: email-api
        image: hivqs79/portal-do-conselho_email-api:latest
        ports:
        - containerPort: 8083
        resources:
          requests:
            cpu: 300m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 1024Mi                
        

---
apiVersion: v1
kind: Service
metadata:
  name: email-api-service
spec:
  selector:
    app: email-api
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
  type: ClusterIP
