k8s/front-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-app
  template:
    metadata:
      labels:
        app: front-app
    spec:
      containers:
      - name: front
        image: hivqs79/portal-do-conselho_front-app:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 100m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: front-app
