k8s/general-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: general-api-deployment
spec:
  selector:
    matchLabels:
      app: general-api
  template:
    metadata:
      labels:
        app: general-api
    spec:
      containers:
      - name: general-api
        image: hivqs79/portal-do-conselho_general-api:latest
        ports:
        - containerPort: 8081
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 200m
            memory: 512Mi                
        

---
apiVersion: v1
kind: Service
metadata:
  name: general-api-service
spec:
  selector:
    app: general-api
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
