k8s/logs-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logs-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logs-api
  template:
    metadata:
      labels:
        app: logs-api
    spec:
      containers:
      - name: logs-api
        image: hivqs79/portal-do-conselho_logs-api:latest
        ports:
        - containerPort: 8070
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi                
        

---
apiVersion: v1
kind: Service
metadata:
  name: logs-api-service
spec:
  selector:
    app: logs-api
  ports:
    - protocol: TCP
      port: 8070
      targetPort: 8070
  type: ClusterIP
