k8s/mysql-aws-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-aws-image-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-aws-image
  template:
    metadata:
      labels:
        app: mysql-aws-image
    spec:
      containers:
      - name: mysql-aws-image
        image: mysql:5.7
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-aws-image-persistent-storage
          mountPath: /var/lib/mysql
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi 
      volumes:
      - name: mysql-aws-image-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-aws-image-pvc
      
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-aws-image-service
spec:
  selector:
    app: mysql-aws-image
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
