k8s/mysql-general.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-general-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-general
  template:
    metadata:
      labels:
        app: mysql-general
    spec:
      containers:
      - name: mysql-general
        image: mysql:5.7
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-general-persistent-storage
          mountPath: /var/lib/mysql
        resources:
          requests:
            cpu: 200m
            memory: 512Mi
          limits:
            cpu: 400m
            memory: 1Gi
      volumes:
      - name: mysql-general-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-general-pvc
      
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-general-service
spec:
  selector:
    app: mysql-general
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
